fix: fix the quran font, scrollbar, responsiveness

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,35 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+/* * {
+  scrollbar-width: thin;
+  scrollbar-color: #ff0000;
 } */
+
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: rgba(194, 194, 194, 0.25);
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(90, 163, 247, 0.25);
+  border-radius: 14px;
+  /* border: 1px solid rgba(90, 163, 247, 0.3); */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(90, 163, 247, 0.4);
+}
 
 
 @layer components {
